--- a/FreeCodeCamp.html
+++ b/FreeCodeCamp.html
@@ -14,7 +14,7 @@
 <div class="container-fluid">
   <h3 class="text-primary text-center">jQuery Playground</h3>
   <div class="row">
-    <div class="col-xs-6">
+    <div class="col-md-6">
       <h4>#left-well</h4>
       <div class="well" id="left-well">
       <div class="row">
@@ -25,7 +25,7 @@
       </div>
     </div>
     <title>Anjney's GitHub Page</title>
-    <div class="col-xs-6">
+    <div class="col-md-6">
       <h4>#right-well</h4>
       
       <div class="well" id="right-well">
