i dont even know

--- a/index.html
+++ b/index.html
@@ -63,18 +63,12 @@ padding: 20px;
   padding: 20px;
 }
 .brand-logo{
-  padding: 10px;
-}
-  
-  
-  
-  
-  
-  </style>
+  padding: 10px;}
+</style>
 
 <div id="Header" class="content well container">
   <h2 class="heading"><font color="#1de9b6">Anjney Mital</font></h2>
-  <div id="Info" class="sinfo card hoverable">
+  <div id="Info" class="sinfo card ">
     <p class="flow-text">
       I am a 14 year old Web Designer.
       <br> I can code in Python(2),Android,Arduino,HTML,CSS,jquery,Bash(Linux Terminal)<br> and also am well versed in computer hardware.
