--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
-</html>
+<html>
 <!-- Compiled and minified CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
 
@@ -43,7 +43,7 @@
   <style>
   body{background-color:#1de9b6;}
 .content{
-  background-color:#eceff;
+  background-color: white ;
   box-shadow: 5px 5px 5px 5px ;
   margin: 20px;
 
@@ -132,7 +132,7 @@ What do you want to say to me?:
 <input type="submit" value="Send"class="btn btn-default">
 <input type="reset" value="Reset" class="btn btn-default">
   </form></div>
-</div>
+
    <script>
    $("h2").addClass("text-center")
    </script>
