Fixed website card

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     </div>
   </nav>
   <title>Anjney Mital</title>
-
   <style>
 body {background-color:#1de9b6;}
 .content {
@@ -58,25 +57,20 @@ h2 {
   margin: 20px;
   padding: 20px;}
 .form {margin: 20px;}
-
 .brand-logo {padding: 10px;}
-
 #Website1 {
-  align-items: centre;
-  margin-left: 10px;}
-
+  text-align: center;
+  margin-left: 10px;
+  width: 100%;}
 #Website2 {
-  align-items: centre;
-  margin-left: 10px;}
-
+  text-align: center;
+  margin-left: 10px;
+  width: 100%;}
 .well{align-items: center;}
-
 .nav-wrapper{background-color: #0d47a1;}
-
 #footer{
     background-color: #0d47a1;
     color:#0d47a1;}
-
 #form{
       margin: 20px;
       padding: 20px;}
@@ -85,23 +79,20 @@ h2 {
     float: none !important;
     width: auto;
     display: block !important;}
-
 .brand-logo{
     font-family: 'Bungee Shade',cursive;
     color:#1de9b6;}
-
 h3{color:#1de9b6;
   font-family: 'Lobster', cursive;}
-
 </style>
 
 <div id="Header" class="content well container center">
   <h2 class="heading"><font color="#1de9b6">Hi!</font></h2>
     <p class="flow-text">
 
-      <div id="Info" class="sinfo card hoverable container text-left">
+      <div id="Info" class="sinfo card hoverable container center" style="word-break:break-all;">
 		   I am a 14 year old Programmer!
-      <br> I can code in Python(2),Android,Arduino,HTML,CSS,jquery,Bash(Linux Terminal)<br> and also am well versed in computer hardware.
+      <br> I can code in Python(2),Android,Arduino,HTML,CSS,jquery,Bash and also am well versed in computer hardware.
       <ul>Points About Me:
         <li>Foodie</li>
           <li>Computer Builder<li>
@@ -112,8 +103,8 @@ h3{color:#1de9b6;
     </p>
   </div>
 
-<div id="Website1" class="row center">
-    <div class="col s12 m7 auto">
+  <div id="Website1" class="row center">
+    <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
           <img src="http://i.imgur.com/bRDUmZL.png">
@@ -129,8 +120,11 @@ h3{color:#1de9b6;
     </div>
   </div>
 
+
+
+
 <div id="Website2" class="row center">
-    <div class="col s12 m7 auto">
+    <div class="col s12 m7">
       <div class="card">
         <div class="card-image">
           <img src="https://raw.githubusercontent.com/anjneyM/hello-world/master/Screenshot%20(34).png">
@@ -146,7 +140,7 @@ h3{color:#1de9b6;
     </div>
   </div>
 
-<div class="card form" id="form" style="margin-bottom: 10px;">
+<div class="card form" id="form">
 <h3 >Get In Touch.</h3>
   <form action="mailto:manjney@gmail.com" method="post" enctype="text/plain">
     Name:<br>
