Fixed website card 3

--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@ h2 {
 .brand-logo {padding: 10px;}
 #Website1 {
   text-align: center;
+  align-items: center;
   margin-left: 10px;
   width: 100%;}
 #Website2 {
   text-align: center;
+  align-items: center;
   margin-left: 10px;
   width: 100%;}
 .well{align-items: center;}
