--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ h2 {
     background-color: #0d47a1;
     color:#0d47a1;}
 #form {
-      margin: 20px;}
+      margin: 10px;}
 .center {
     margin: 0 auto !important;
     float: none !important;
@@ -153,16 +153,14 @@ E-mail:<br>
 What do you want to say to me?:
 <input type="text" name="comment" size="50" required>
     <br><br>
-<input type="submit" value="Send"class="btn btn-default">
-<input type="reset" value="Reset" class="btn btn-default">
+<input type="submit" value="Send"class="btn btn-default"style="margin-bottom: 20px">
+<input type="reset" value="Reset" class="btn btn-default" style="margin-bottom: 20px">
+</form></div>
 <br>
   <br>
 	  <br>
-	</form></div>
 
 </div>
-
-
 <footer class="page-footer" id="footer">
   <div id="End" class="container">
     <div class="row">
