--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
   <!--Import Google Icon Font-->
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -74,7 +76,10 @@ h2 {
 .nav-wrapper{background-color: #0d47a1;}
 #footer {
     background-color: #0d47a1;
-    color:#0d47a1;}
+    color:#0d47a1;
+    position:end;
+      width:100%;
+      bottom:0px;}
 #form {
       margin: 10px;}
 .center {
@@ -157,8 +162,6 @@ What do you want to say to me?:
 <input type="reset" value="Reset" class="btn btn-default" style="margin-bottom: 20px">
 </form></div>
 <br>
-  <br>
-	  <br>
 
 </div>
 <footer class="page-footer" id="footer">
@@ -191,3 +194,4 @@ What do you want to say to me?:
     </div>
   </div>
 </footer>
+</html>
